[2단계 - 로그인 구현하기] 랜디(김정우) 미션 제출합니다.  (#893)
* feat: 로그인 기능 구현

* refactor: RootController 처리 요청 조건 추가

* refactor: 리소스 요청 로직 수정

- 리소스 요청 URI의 마지막에 확장자가 없다면 기본 확장자 .html이 추가되어 처리되도록 수정
- 예시. "/login"과 "/login.html" 모두 "static/login.html"이 응답 되도록 수정

* feat: 요청 메세지 헤더와 바디 읽기 구현

* feat: 회원가입 기능 구현

* feat: 응답메세지에 쿠키 추가

* feat: 요청메세지에서 쿠키 읽기 구현

* feat: 로그인시 세션 생성

* feat: 회원가입시 세션 생성

* refactor: HTTP 헤더 상수 적용

* refactor: HttpResponse에 리다이렉션 세팅 메서드 추가

* refactor: JSESSIONID 상수화

* refactor: HttpResponse의 write 메서드 생성

* refactor: 패키지 구조 정리

* fix: 일부 요청 처리 버그 수정

* refactor: 회원가입 요청 바디 검증

* refactor: 세션 저장소의 동시성 문제 보완

* refactor: 리소스 URI 검증 로직 강화

* refactor: 요청 메세지 검증 강화

* refactor: 메세지 헤더 처리 강화

* fix: 바디가 없는 경우 헤더 종료줄이 없던 버그 수정

* refactor: 쿠키 파싱 로직 강화

* refactor: 응답 메세지 형식 수정

* docs: 프로젝트 구조 정리

* docs: 프로젝트 구조 정리

* docs: 프로젝트 구조 정리

* refactor: 로그인을 POST 방식으로 변경

* refactor: 인증 메서드명 수정

---------

Co-authored-by: kjungw <sagakkb@gmail.com>